--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "gulp-imageoptim": "^1.0.3",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-ejs": "^1.0.3",
+    "gulp.spritesmith": "^6.2.0"
   },
   "repository": {},
   "keywords": [],
