--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-imageoptim": "^1.0.3",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-ejs": "^1.0.3",
+    "gulp-concat-util": "^0.5.5",
     "gulp.spritesmith": "^6.2.0"
   },
   "repository": {},
