--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "",
+  "name": "gnavi-gulp-boiler-ejs",
   "description": "gulp boilerplate for gnavi front-end development",
   "version": "1.0.5",
   "homepage": "",
   "main": "index",
   "scripts": {
+    "start": "gulp start",
+    "build": "gulp build",
+    "optim": "gulp optim",
+    "test": "gulp test",
     "stats": "./node_modules/stylestats/bin/cli.js dist/css/*.css -f csv > stats.csv"
   },
   "author": "",
@@ -19,19 +23,23 @@
     "babelify": "^7.2.0",
     "del": "^1.2.1",
     "es6-promise": "3.1.2",
-    "eslint-config-gnavi": "0.0.9",
+    "eslint-config-gnavi": "^1.0.0-beta1",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-babel": "^6.1.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-util": "^0.5.5",
     "gulp-connect": "^3.1.0",
     "gulp-csscomb": "^3.0.6",
     "gulp-cssmin": "^0.1.7",
     "gulp-csso": "^1.1.0",
     "gulp-ejs": "^2.1.1",
     "gulp-htmlmin": "^1.3.0",
-    "gulp-jshint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-imageoptim": "^1.0.3",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-ejs": "^1.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
@@ -42,14 +50,13 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
-    "jshint": "^2.8.0",
-    "gulp-imageoptim": "^1.0.3",
-    "gulp-livereload": "^3.8.1",
-    "gulp-minify-ejs": "^1.0.3",
-    "gulp-concat-util": "^0.5.5",
-    "gulp.spritesmith": "^6.2.0"
+    "gulp.spritesmith": "^6.2.0",
+    "stylestats": "^5.4.2"
   },
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://github.com/gurunavi-creators/gnavi-gulp-boiler-ejs.git"
+  },
   "keywords": [],
   "bugs": {}
 }
