--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babelify": "^7.2.0",
     "del": "^1.2.1",
     "es6-promise": "3.1.2",
-    "eslint-config-gnavi": "^1.0.0-beta1",
+    "eslint-config-gnavi": "^1.0.0",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-babel": "^6.1.1",
@@ -35,8 +35,8 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-csso": "^1.1.0",
     "gulp-ejs": "^2.1.1",
-    "gulp-htmlmin": "^1.3.0",
     "gulp-eslint": "^3.0.1",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-imageoptim": "^1.0.3",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-ejs": "^1.0.3",
